2006-07-20  Sami Wagiaalla  <swagiaal@redhat.com>

	* SessionManagerGui.java: Removed getNumberSuffix.

2006-07-20  Rick Moseley  <rmoseley@redhat.com>

	* glade/procpop.glade: Added tooltips.

2006-07-20  Tim Moore  <timmore@redhat.com>

	* memory/MemoryWindow.java (setTask): "Handle" TaskException.
	* register/RegisterWindow.java (setTask): ditto.
	* srcwin/SourceWindowFactory.java (finishSourceWin): ditto.

2006-07-20 Phil Muldoon  <pmuldoon@redhat.com>

	* glade/frysk_create_session.glade: Added tooltips.

2006-07-19  Phil Muldoon  <pmuldoon@redhat.com>

	* druid/CreateFryskSessionDruid.java (setNewSessionMode): 
	Call unFilterData. Stop eating processes.
	(setEditSessionMode): Ditto.
	(unFilterData): New.
	(getProcessObserverControls): Add Custom Observer controls
	for button.
	* glade/frysk_create_session.glade: Added Custom Observers
	Button to druid.

	* test/TestGlade.java: New.

2006-07-19	Nurdin Premji <npremji@redhat.com>

	* glade/procpop.glade: Added minimum size for statusWidget box.

2006-07-19  Ivan Pantuyev <ipantuye@redhat.com>

	* monitor/MainWindow.java: commented out terminal creation
	* glade/procpop.glade: added a textview where terminal was

2006-07-19  Phil Muldoon  <pmuldoon@redhat.com>

	* Gui.java (gui): Remove splash screen in mainline.

2006-07-18  Phil Muldoon  <pmuldoon@redhat.com>

	* SessionManagerGui.java (getManagerControls): Only build terminal when
	needed.

2006-07-18  Phil Muldoon  <pmuldoon@redhat.com>

	* test/TestIconManager.java: Apply GNU format.

2006-07-18  Adam Jocksch  <ajocksch@redhat.com>

	* Gui.java (initializePreferences): No longers adds default groups
	to the manager.

2006-07-17  Phil Muldoon  <pmuldoon@redhat.com>

	* test/TestIconManager.java: New File.

2006-07-17  Tim Moore  <moore@redhat.com>

	* register/RegisterWindow.java (cols): Add column for BigInteger value
	of a register.
	(setTask): Initialize value of registers as a BigInteger, not the
	string representation of a long.
	(signExtend): delete