@@ -63,6 +63,7 @@ import frysk.gui.common.IconManager;
 import frysk.gui.common.Util;
 import frysk.gui.monitor.ListView;
 import frysk.gui.monitor.WindowManager;
+import frysk.gui.sessions.ChildPIDWindow;
 import frysk.gui.sessions.Session;
 import frysk.gui.sessions.SessionManager;
 import frysk.gui.srcwin.SourceWindowFactory;
@@ -103,6 +104,10 @@ public class SessionManagerGui
   private Button newSession;
 
   private Button openButton;
+  
+  private LibGlade childWindowGlade;
+  
+  private ChildPIDWindow childPIDWindow;
 
   public SessionManagerGui (LibGlade glade)
   {
@@ -334,10 +339,12 @@ public class SessionManagerGui
       {
         if (arg0.isOfType(ButtonEvent.Type.CLICK))
           {
-            WindowManager.theManager.mainWindow.showAll();
+            childPIDWindow = new ChildPIDWindow(childWindowGlade);
+            Session s = (Session) previousSessions.getSelectedObject();
+
 			if (previousSession.getState())
 			{
-            	WindowManager.theManager.mainWindow.setSession((Session) previousSessions.getSelectedObject());
+                childPIDWindow.checkSession(s);
 				WindowManager.theManager.mainWindow.hideTerminal();
 			}
 			if (terminalSession.getState())
@@ -399,6 +406,11 @@ public class SessionManagerGui
         return true;
       }
     return false;
+  }
+  
+  public void setChildPIDGlade(LibGlade glade)
+  {
+    this.childWindowGlade = glade;
   }
 
 }
