@@ -151,7 +151,6 @@ public class SessionProcDataModel
     // if (this.currentSession != session) { // removed until session window is
     // re-implemented
     this.currentSession = session;
-    this.currentSession.populateProcs();
 
     Iterator i = this.currentSession.getProcesses().iterator();
     while (i.hasNext())
